Fix spacing for webkit devices

--- a/packages/trader/src/sass/app/modules/mt5/mt5.scss
+++ b/packages/trader/src/sass/app/modules/mt5/mt5.scss
@@ -9,7 +9,9 @@
 }
 .dc-modal__container_mt5-password-modal,
 .dc-mobile-dialog__mt5-password-modal {
-    max-width: 384px;
+    @include desktop {
+        max-width: 384px;
+    }
     min-height: 300px;
     min-width: initial !important;
     display: flex;
